--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 
   <!-- ===================== HERO ===================== -->
   <main>
-    <section class="hero" id="hero">
+    <section class="hero" id="hero" style="isolation:isolate;">
       <div class="hero__background">
         <div class="hero__gradient hero__gradient--left"></div>
         <div class="hero__gradient hero__gradient--right"></div>
