--- a/index.html
+++ b/index.html
@@ -1357,5 +1357,201 @@
       });
     }
   </script>
+  <style>
+/* =========================================================
+   KONTAKTIO – PERSONAL TRAINER WOW SKIN
+   Yellow / Orange / Fitness / Premium Glass
+   ========================================================= */
+
+:root {
+  --k-accent: #ffd400;      /* yellow */
+  --k-accent2: #ff7a18;     /* orange */
+  --k-glass: rgba(10, 12, 18, 0.78);
+  --k-glass-soft: rgba(5, 8, 12, 0.42);
+  --k-border: rgba(255, 255, 255, 0.14);
+  --k-text: rgba(255, 255, 255, 0.94);
+  --k-muted: rgba(255, 255, 255, 0.65);
+}
+
+/* ===============================
+   LAUNCHER (Floating Button)
+=============================== */
+.kontaktio-launcher {
+  width: 64px !important;
+  height: 64px !important;
+  border-radius: 999px !important;
+  background:
+    radial-gradient(circle at 30% 30%, var(--k-accent), var(--k-accent2)) !important;
+  border: 1px solid rgba(255,255,255,.22) !important;
+  box-shadow:
+    0 22px 70px rgba(0,0,0,.65),
+    0 0 0 14px rgba(255,212,0,.22),
+    0 0 0 30px rgba(255,122,24,.12) !important;
+  position: fixed !important;
+  bottom: 28px !important;
+  right: 28px !important;
+  z-index: 999999 !important;
+  overflow: hidden;
+  cursor: pointer;
+  transition: transform .25s ease;
+}
+
+.kontaktio-launcher:hover {
+  transform: translateY(-4px) scale(1.05);
+}
+
+.kontaktio-launcher::before {
+  content: "";
+  position: absolute;
+  inset: -45%;
+  background:
+    radial-gradient(60% 60% at 30% 30%, rgba(255,255,255,.45), transparent 60%),
+    radial-gradient(60% 60% at 70% 70%, rgba(255,255,255,.18), transparent 62%);
+  filter: blur(8px);
+  animation: kontaktioAurora 6.5s ease-in-out infinite;
+}
+
+.kontaktio-launcher::after {
+  content: "";
+  position: absolute;
+  inset: 0;
+  border-radius: 999px;
+  background:
+    linear-gradient(135deg, rgba(255,255,255,.25), transparent 60%);
+  opacity: .35;
+}
+
+.kontaktio-launcher > div {
+  position: relative;
+  z-index: 2;
+  font-size: 26px;
+  font-weight: 900;
+  color: #1a120a;
+}
+
+/* ===============================
+   WIDGET CONTAINER
+=============================== */
+.kontaktio-widget {
+  border-radius: 24px !important;
+  border: 1px solid var(--k-border) !important;
+  background: var(--k-glass) !important;
+  backdrop-filter: blur(26px) saturate(160%) !important;
+  -webkit-backdrop-filter: blur(26px) saturate(160%) !important;
+  box-shadow:
+    0 32px 110px rgba(0,0,0,.65),
+    0 1px 0 rgba(255,255,255,.08) inset !important;
+  position: fixed !important;
+  bottom: 110px !important;
+  right: 28px !important;
+  z-index: 999999 !important;
+  overflow: hidden;
+}
+
+.kontaktio-widget::before {
+  content: "";
+  position: absolute;
+  inset: -60px;
+  background:
+    radial-gradient(700px 480px at 20% 10%, rgba(255,212,0,.28), transparent 60%),
+    radial-gradient(620px 520px at 90% 0%, rgba(255,122,24,.24), transparent 58%),
+    radial-gradient(680px 560px at 30% 110%, rgba(255,212,0,.18), transparent 55%);
+  filter: blur(28px);
+  pointer-events: none;
+  animation: kontaktioAurora 9s ease-in-out infinite;
+}
+
+/* ===============================
+   HEADER
+=============================== */
+.kontaktio-header {
+  background:
+    linear-gradient(180deg, rgba(5,8,12,.65), rgba(5,8,12,.25)) !important;
+  color: var(--k-text) !important;
+  border-bottom: 1px solid rgba(255,255,255,.12);
+}
+
+.kontaktio-header-sub {
+  color: var(--k-muted) !important;
+}
+
+/* ===============================
+   CHAT BUBBLES
+=============================== */
+.kontaktio-bubble {
+  border-radius: 18px !important;
+  font-size: 14.5px !important;
+  line-height: 1.5 !important;
+  box-shadow:
+    0 18px 50px rgba(0,0,0,.22),
+    0 1px 0 rgba(255,255,255,.06) inset !important;
+}
+
+.kontaktio-row.bot .kontaktio-bubble {
+  background: rgba(255,255,255,.08) !important;
+  color: var(--k-text) !important;
+  border: 1px solid rgba(255,255,255,.14);
+}
+
+.kontaktio-row.user .kontaktio-bubble {
+  background:
+    linear-gradient(135deg, var(--k-accent), var(--k-accent2)) !important;
+  color: #1a120a !important;
+  font-weight: 700;
+}
+
+/* ===============================
+   INPUT AREA
+=============================== */
+.kontaktio-inputwrap {
+  background:
+    linear-gradient(180deg, rgba(5,8,12,.18), rgba(5,8,12,.38)) !important;
+  border-top: 1px solid rgba(255,255,255,.12);
+}
+
+.kontaktio-input {
+  background: rgba(255,255,255,.12) !important;
+  color: var(--k-text) !important;
+  border: 1px solid rgba(255,255,255,.18) !important;
+}
+
+.kontaktio-input::placeholder {
+  color: rgba(255,255,255,.55);
+}
+
+.kontaktio-send {
+  background:
+    linear-gradient(135deg, var(--k-accent), var(--k-accent2)) !important;
+  color: #1a120a !important;
+  border: 1px solid rgba(255,255,255,.22);
+  font-weight: 800;
+  box-shadow: 0 12px 40px rgba(255,122,24,.35);
+}
+
+/* ===============================
+   AURORA ANIMATION
+=============================== */
+@keyframes kontaktioAurora {
+  0%   { transform: translate(0,0) scale(1); }
+  50%  { transform: translate(14px,-12px) scale(1.05); }
+  100% { transform: translate(0,0) scale(1); }
+}
+
+@media (prefers-reduced-motion: reduce) {
+  .kontaktio-widget::before,
+  .kontaktio-launcher::before {
+    animation: none !important;
+  }
+}
+</style>
+
+<!-- SCRIPT – zostawiasz bez zmian -->
+<script
+  src="https://cdn.jsdelivr.net/gh/kontaktio-demo/kontaktio@5d9beb0/kontaktio.js"
+  data-kontaktio
+  data-client="GREENFUEL"
+  data-backend="https://chatbot-backend-x2cy.onrender.com"
+></script>
+
 </body>
 </html>
