--- a/index.html
+++ b/index.html
@@ -1549,7 +1549,7 @@
 <script
   src="https://cdn.jsdelivr.net/gh/kontaktio-demo/kontaktio@5d9beb0/kontaktio.js"
   data-kontaktio
-  data-client="GREENFUEL"
+  data-client="EliteShape"
   data-backend="https://chatbot-backend-x2cy.onrender.com"
 ></script>
 
