--- a/index.html
+++ b/index.html
@@ -1021,6 +1021,21 @@
       </div>
     </div>
   </div>
+    <div class="back-bar" aria-label="Powrót na stronę główną">
+  <a href="https://www.kontaktio.pl/" class="back-bar__link">
+    ← Zainteresowany? Wróć na strone główną.
+  </a>
+</div>
+  <script>
+  window.addEventListener("scroll", () => {
+    const bar = document.querySelector(".back-bar");
+    if (window.scrollY > 400) {
+      bar.classList.add("visible");
+    } else {
+      bar.classList.remove("visible");
+    }
+  });
+</script>
 
   <!-- =========================================================
        SCRIPTS (stabilne, bez bugów layoutu)
