--- a/index.html
+++ b/index.html
@@ -20,7 +20,10 @@
   <meta property="og:description" content="System, który dowozisz. Metamorfozy, siła, sylwetka — bez ekstremów." />
   <meta property="og:type" content="website" />
 </head>
-
+  <link rel="icon" href="data:image/svg+xml,
+  <svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 100 100'>
+    <text y='.9em' font-size='90'>🏋️‍♂️</text>
+  </svg>">
 <body class="page" data-page>
   <!-- =========================================================
        LOADER
