--- a/index.html
+++ b/index.html
@@ -1556,6 +1556,119 @@
   data-client="EliteShape"
   data-backend="https://chatbot-backend-x2cy.onrender.com"
 ></script>
+<!-- Sticky CTA -->
+<div class="stickyBar" id="stickyBar" aria-hidden="true">
+  <div class="stickyBar__left">
+    <b>Zobacz inne branże</b>
+    <span>Każda ma gotowego asystenta AI dopasowanego do klientów.</span>
+  </div>
+  <div class="stickyBar__right">
+    <a class="stickyBtn" href="https://kontaktio.pl">← Powrót</a>
+    <button class="stickyClose" id="stickyClose" type="button" aria-label="Zamknij">×</button>
+  </div>
+</div>
+<style>
+  /* Sticky CTA bar */
+.stickyBar{
+  position: fixed;
+  left: 16px;
+  right: 16px;
+  bottom: 16px;
+  z-index: 50;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  gap: 16px;
+  padding: 16px 20px;
+  border-radius: 22px;
+  background: rgba(255,255,255,.06);
+  border: 1px solid rgba(255,255,255,.14);
+  backdrop-filter: blur(18px);
+  -webkit-backdrop-filter: blur(18px);
+  box-shadow: 0 20px 80px rgba(0,0,0,.55);
+  transform: translateY(24px);
+  opacity: 0;
+  transition: transform .6s var(--ease), opacity .6s var(--ease);
+  pointer-events: none;
+}
+.stickyBar.on{
+  transform: translateY(0);
+  opacity: 1;
+  pointer-events: auto;
+}
+.stickyBar__left b{
+  display: block;
+  font-size: 13px;
+  font-weight: 900;
+  color: rgba(255,255,255,.92);
+}
+.stickyBar__left span{
+  display: block;
+  font-size: 12px;
+  color: rgba(255,255,255,.64);
+}
+.stickyBar__right{
+  display: flex;
+  gap: 12px;
+  align-items: center;
+}
+.stickyBtn{
+  display: inline-flex;
+  align-items: center;
+  justify-content: center;
+  height: 38px;
+  padding: 0 16px;
+  border-radius: 999px;
+  border: 1px solid rgba(255,255,255,.14);
+  background: linear-gradient(135deg, #10b981, #22c55e);
+  color: #0b0b0d;
+  font-weight: 900;
+  font-size: 12px;
+  text-decoration: none;
+  box-shadow: 0 14px 40px rgba(16,185,129,.35);
+}
+.stickyBtn:hover{
+  box-shadow: 0 20px 60px rgba(16,185,129,.55);
+}
+.stickyClose{
+  width: 38px;
+  height: 38px;
+  border-radius: 999px;
+  border: 1px solid rgba(255,255,255,.14);
+  background: rgba(255,255,255,.06);
+  color: rgba(255,255,255,.88);
+  font-weight: 900;
+  font-size: 18px;
+  cursor: pointer;
+}
 
+</style>
+  <script>
+    (function stickyBar(){
+  const bar = document.getElementById("stickyBar");
+  const close = document.getElementById("stickyClose");
+  if (!bar || !close) return;
+
+  const key = "kontaktio_sticky_closed";
+  const closed = (() => {
+    try { return localStorage.getItem(key) === "1"; } catch { return false; }
+  })();
+  if (closed) return;
+
+  function onScroll(){
+    const y = window.scrollY || 0;
+    if (y > 900) bar.classList.add("on");
+    else bar.classList.remove("on");
+  }
+  window.addEventListener("scroll", onScroll, { passive: true });
+  onScroll();
+
+  close.addEventListener("click", () => {
+    bar.classList.remove("on");
+    try { localStorage.setItem(key, "1"); } catch {}
+  });
+})();
+
+  </script>
 </body>
 </html>
