--- a/index.html
+++ b/index.html
@@ -1556,19 +1556,17 @@
   data-client="EliteShape"
   data-backend="https://chatbot-backend-x2cy.onrender.com"
 ></script>
-<!-- Sticky CTA -->
+<!-- Sticky CTA (centered) -->
 <div class="stickyBar" id="stickyBar" aria-hidden="true">
-  <div class="stickyBar__left">
+  <div class="stickyBar__content">
     <b>Zobacz inne branże</b>
     <span>Każda ma gotowego asystenta AI dopasowanego do klientów.</span>
-  </div>
-  <div class="stickyBar__right">
     <a class="stickyBtn" href="https://kontaktio.pl">← Powrót</a>
-    <button class="stickyClose" id="stickyClose" type="button" aria-label="Zamknij">×</button>
   </div>
+  <button class="stickyClose" id="stickyClose" type="button" aria-label="Zamknij">×</button>
 </div>
 <style>
-  /* Sticky CTA bar */
+  /* Sticky CTA bar — centered version */
 .stickyBar{
   position: fixed;
   left: 16px;
@@ -1577,10 +1575,10 @@
   z-index: 50;
   display: flex;
   align-items: center;
-  justify-content: space-between;
-  gap: 16px;
-  padding: 16px 20px;
-  border-radius: 22px;
+  justify-content: center;
+  gap: 20px;
+  padding: 20px;
+  border-radius: 24px;
   background: rgba(255,255,255,.06);
   border: 1px solid rgba(255,255,255,.14);
   backdrop-filter: blur(18px);
@@ -1596,21 +1594,21 @@
   opacity: 1;
   pointer-events: auto;
 }
-.stickyBar__left b{
-  display: block;
+.stickyBar__content{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  text-align: center;
+  gap: 10px;
+}
+.stickyBar__content b{
   font-size: 13px;
   font-weight: 900;
   color: rgba(255,255,255,.92);
 }
-.stickyBar__left span{
-  display: block;
+.stickyBar__content span{
   font-size: 12px;
   color: rgba(255,255,255,.64);
-}
-.stickyBar__right{
-  display: flex;
-  gap: 12px;
-  align-items: center;
 }
 .stickyBtn{
   display: inline-flex;
@@ -1631,8 +1629,11 @@
   box-shadow: 0 20px 60px rgba(16,185,129,.55);
 }
 .stickyClose{
-  width: 38px;
-  height: 38px;
+  position: absolute;
+  top: 10px;
+  right: 10px;
+  width: 34px;
+  height: 34px;
   border-radius: 999px;
   border: 1px solid rgba(255,255,255,.14);
   background: rgba(255,255,255,.06);
