--- a/index.html
+++ b/index.html
@@ -1559,7 +1559,7 @@
 <!-- Sticky CTA (centered) -->
 <div class="stickyBar" id="stickyBar" aria-hidden="true">
   <div class="stickyBar__content">
-    <b>Zobacz inne branże</b>
+    <b>Zainteresowany? Zobacz inne branże</b>
     <span>Każda ma gotowego asystenta AI dopasowanego do klientów.</span>
     <a class="stickyBtn" href="https://kontaktio.pl">← Powrót</a>
   </div>
