--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta http-equiv="x-ua-compatible" content="ie=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
 
-  <title>EliteShape | Trener personalny premium</title>
+  <title>EliteShape | Trener personalny</title>
   <meta name="description" content="Premium trening personalny: plan, technika, żywienie i monitoring. Efekt wow bez marnowania godzin na siłowni." />
   <meta name="theme-color" content="#0b0d12" />
 
